# cmake-init

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  cppcheck_suppressions.txt  glfw_glad_template_config  options.cmake  vcpkg.json
.github/workflows/: clang-format.yml  linter.yml
cmake/: configuration_header.cmake  custom_variables.cmake  doxygen.cmake  git_tag_versioning.cmake  init.cmake  vcpkg.cmake
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classcmake__init_1_1_cmake_init-members.html  classcmake__init_1_1_cmake_init.html  classcmake__init_1_1_cmake_init.js  classcmake__init_1_1_cmake_init_af99d4769e6534b9d9c144b8c986b180c_cgraph.map  classcmake__init_1_1_cmake_init_af99d4769e6534b9d9c144b8c986b180c_cgraph.md5  classcmake__init_1_1cmake__init__lib_1_1_print_greeting-members.html  classcmake__init_1_1cmake__init__lib_1_1_print_greeting.html  classcmake__init_1_1cmake__init__lib_1_1_print_greeting.js  classcmake__init_1_1cmake__init__lib_1_1_print_greeting_a841c0c6e9649d380b91cdeaf7069f4d9_icgraph.map  classcmake__init_1_1cmake__init__lib_1_1_print_greeting_a841c0c6e9649d380b91cdeaf7069f4d9_icgraph.md5  classes.html  classtest-members.html  classtest.html  cmake__init__lib_8cc.html  cmake__init__lib_8cc.js  cmake__init__lib_8cc__incl.map  cmake__init__lib_8cc__incl.md5  cmake__init__lib_8h.html  cmake__init__lib_8h.js  cmake__init__lib_8h__dep__incl.map  cmake__init__lib_8h__dep__incl.md5  cmake__init__lib_8h__incl.map  cmake__init__lib_8h__incl.md5  cmake__init__lib_8h_source.html  cmake__init__lib__test_8cc.html  cmake__init__lib__test_8cc.js  cmake__init__lib__test_8cc__incl.map  cmake__init__lib__test_8cc__incl.md5  cmake__init__lib__test_8cc_a79bd4a497f0fafca40c8b6e0c6575735_cgraph.map  cmake__init__lib__test_8cc_a79bd4a497f0fafca40c8b6e0c6575735_cgraph.md5  config_8h.html  config_8h.js  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  (+116 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
include/: CMakeLists.txt  README.md  cmake_init_lib.h
include/array_utils/: print_array.hpp
include/cmake-init/: README.md  cmake_init.h  cmake_init_lib.h
include/cmake_init_lib/: print_greeting.h
include/sum/: sum.h
src/: CMakeLists.txt  README.md  cmake_init_lib.cc  main.cc  main.cpp
src/array_utils/: print_array.cpp
src/cmake_init_lib/: print_greeting.cc
src/config/: config.h  glfw_glad_template_config.cpp  glfw_glad_template_config.hpp
src/configuration/: config.h  config.h.ini
src/impl/: CMakeLists.txt  cli.cc  cmake_init.cc  cmake_init_lib.cc  main.cc
src/impl/cmake_init/: CMakeLists.txt  print_greeting.cc
src/impl/cmake_init_lib/: CMakeLists.txt  print_greeting.cc
src/inc/: CMakeLists.txt  cli.h
src/inc/cmake_init/: CMakeLists.txt  print_greeting.h
src/inc/cmake_init_lib/: CMakeLists.txt  print_greeting.h
src/sum/: sum.cc
tests/: CMakeLists.txt  README.md  cli_test.cc  cmake_init_lib.cc  cmake_init_lib_test.cc  cmake_init_test.cc  main.cc  main_test.cc
tests/cmake_init/: CMakeLists.txt  print_greeting_test.cc
tests/cmake_init_lib/: CMakeLists.txt  print_greeting.cc  print_greeting_test.cc
